lostCTRL/force-app/main/default/objects/Product_lctrl__c/Product_lctrl__c.object-meta.xml
<CustomObject>
    <label>Product_lctrl</label>
    <nameField>
        <label>Product_lctrl Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product_lctrl</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>