lostCTRL/force-app/main/default/objects/Product_lctrl__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Product_lctrl</relationshipLabel>
    <relationshipName>Product_lctrl</relationshipName>
    <type>Lookup</type>
</CustomField>