lostCTRL/force-app/main/default/objects/Product_lctrl__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category_product__c</referenceTo>
    <relationshipLabel>Product_lctrl</relationshipLabel>
    <relationshipName>Product_lctrl</relationshipName>
    <type>Lookup</type>
</CustomField>