lostCTRL/force-app/main/default/objects/Product_lctrl__c/fields/In_stock__c.field-meta.xml
<CustomField>
    <fullName>In_stock__c</fullName>
    <label>In stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>